--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.27.0",
-    "node-oauth2-server": "^2.4.0",
     "oauth2-server": "^3.1.1",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.7.0"
   }
 }
