--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node index",
+    "migrate": "MIGRATE=migration node migrate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
