finished the sign in and sign up process

--- a/app.yaml
+++ b/app.yaml
@@ -10,3 +10,11 @@ env_variables:
   CLOUD_SQL_DATABASE: "ex-auth"
   CLOUD_SQL_PASSWORD: "4cDzu3f1K1qjq1zp4cDzu3f1K1qjq1zp"
   CLOUD_SQL_INSTANCE: "stoked-reality-284921:europe-west2:extream"
+  EXTREAM_FROM_ADDESS: "noreply@extream.app"
+  SECURE_KEY: "D74C785ACECF7377BA9ABEDA38EE2"
+
+  ADMIN_EMAIL: "rich@extream.app"
+  SENDGRID_API_KEY: "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"
+  SENDGRID_INVITEE_TEMPLATE_ID: "d-61d22a5d97214857bcc557f670aa7156"
+  SENDGRID_PASSWORDLESS_LOGIN_LINK_TEMPLATE_ID: "d-b1326653421d4bf2aa52a3bfdc2b220c"
+  SENDGRID_CLIENT_SIGNUP_TEMPLATE_ID: "d-78529a650e9b418f8e46e583818b517e"
