--- a/.env_local
+++ b/.env_local
@@ -1,14 +1,14 @@
 DB_SOCKET_PATH=/cloud_sql
 CLOUD_SQL_USERNAME=postgres
 CLOUD_SQL_DATABASE=ex-manage
-CLOUD_SQL_PASSWORD=4cDzu3f1K1qjq1zp4cDzu3f1K1qjq1zp
-CLOUD_SQL_INSTANCE=stoked-reality-284921:europe-west2:extream
+CLOUD_SQL_PASSWORD=
+CLOUD_SQL_INSTANCE=
 
-EXTREAM_FROM_ADDESS=noreply@extream.app
-SECURE_KEY=D74C785ACECF7377BA9ABEDA38EE2
+EXTREAM_FROM_ADDESS=
+SECURE_KEY=
 
-ADMIN_EMAIL=rich@extream.app
-SENDGRID_API_KEY=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
-SENDGRID_INVITEE_TEMPLATE_ID=d-61d22a5d97214857bcc557f670aa7156
-SENDGRID_PASSWORDLESS_LOGIN_LINK_TEMPLATE_ID=d-b1326653421d4bf2aa52a3bfdc2b220c
-SENDGRID_CLIENT_SIGNUP_TEMPLATE_ID=d-78529a650e9b418f8e46e583818b517e
+ADMIN_EMAIL=
+SENDGRID_API_KEY=
+SENDGRID_INVITEE_TEMPLATE_ID=
+SENDGRID_PASSWORDLESS_LOGIN_LINK_TEMPLATE_ID=
+SENDGRID_CLIENT_SIGNUP_TEMPLATE_ID=
