--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -27,3 +26,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+      
+    - uses: actions/gcloud/auth@master
+      env:
+        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+        
+    - uses: actions/gcloud/cli@master
+      with:
+        args: "app deploy --quiet --project=APP_ENGINE_PROJECT_NAME"
