--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,18 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
       
-    - uses: actions/gcloud/auth@master
-      env:
-        GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+#     - uses: actions/gcloud/auth@master
+#       env:
+#         GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
         
-    - uses: actions/gcloud/cli@master
+#     - uses: actions/gcloud/cli@master
+#       with:
+#         args: "app deploy --quiet --project=APP_ENGINE_PROJECT_NAME"
+
+    - name: Google Cloud Platform (GCP) CLI - gcloud
+      uses: actions-hub/gcloud@307.0.0
+      env:
+        PROJECT_ID: ${{secrets.GCLOUD_PROJECT_ID}}
+        APPLICATION_CREDENTIALS: ${{secrets.GCLOUD_CREDENTIALS}}
       with:
-        args: "app deploy --quiet --project=APP_ENGINE_PROJECT_NAME"
+        args: app deploy app.yaml
