--- a/app.yaml
+++ b/app.yaml
@@ -12,7 +12,7 @@ env_variables:
   CLOUD_SQL_INSTANCE: $CLOUD_SQL_INSTANCE
   EXTREAM_FROM_ADDESS: $EXTREAM_FROM_ADDESS
   SECURE_KEY: $SECURE_KEY
-
+  TEST_VAR: 'someKey'
   ADMIN_EMAIL: $ADMIN_EMAIL
   SENDGRID_API_KEY: $SENDGRID_API_KEY
   SENDGRID_INVITEE_TEMPLATE_ID: $SENDGRID_INVITEE_TEMPLATE_ID
