--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
+  deploy:
     - uses: microsoft/variable-substitution@v1 
       with:
         files: './app.yaml'
@@ -42,4 +43,3 @@ jobs:
         env_variables.SENDGRID_CLIENT_SIGNUP_TEMPLATE_ID: d-78529a650e9b418f8e46e583818b517e
         env_variables.SENDGRID_INVITEE_TEMPLATE_ID: d-61d22a5d97214857bcc557f670aa7156
         env_variables.SENDGRID_PASSWORDLESS_LOGIN_LINK_TEMPLATE_ID: d-b1326653421d4bf2aa52a3bfdc2b220c
-
