--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "moment": "^2.27.0",
     "oauth2-server": "^3.1.1",
     "pg": "^8.3.0",
-    "sequelize": "^6.3.4"
+    "sequelize": "^6.3.4",
+    "xlsx": "^0.16.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
