set minimum number of instances to 4.

--- a/app.yaml
+++ b/app.yaml
@@ -33,3 +33,6 @@ readiness_check:
   failure_threshold: 2
   success_threshold: 2
   app_start_timeout_sec: 600
+
+automatic_scaling:
+  min_num_instances: 4
