store sender email and reg and login links

--- a/.env_local
+++ b/.env_local
@@ -4,7 +4,7 @@ CLOUD_SQL_DATABASE=ex-manage
 CLOUD_SQL_PASSWORD=
 CLOUD_SQL_INSTANCE=
 
-EXTREAM_FROM_ADDESS=
+EXTREAM_FROM_ADDRESS=
 SECURE_KEY=
 
 ADMIN_EMAIL=
