--- a/app.yaml
+++ b/app.yaml
@@ -10,7 +10,7 @@ env_variables:
   CLOUD_SQL_DATABASE: $CLOUD_SQL_DATABASE
   CLOUD_SQL_PASSWORD: $CLOUD_SQL_PASSWORD
   CLOUD_SQL_INSTANCE: $CLOUD_SQL_INSTANCE
-  EXTREAM_FROM_ADDESS: $EXTREAM_FROM_ADDESS
+  EXTREAM_FROM_ADDRESS: $EXTREAM_FROM_ADDRESS
   SECURE_KEY: $SECURE_KEY
   ADMIN_EMAIL: $ADMIN_EMAIL
   SENDGRID_API_KEY: $SENDGRID_API_KEY
