--- a/.github/workflows/ex-auth.yml
+++ b/.github/workflows/ex-auth.yml
@@ -51,7 +51,7 @@ jobs:
           env_variables.CLOUD_SQL_INSTANCE: ${{ secrets.CLOUD_SQL_INSTANCE }}
           env_variables.CLOUD_SQL_PASSWORD: ${{ secrets.CLOUD_SQL_PASSWORD }}
           env_variables.CLOUD_SQL_USERNAME: ${{ secrets.CLOUD_SQL_USERNAME }}
-          env_variables.EXTREAM_FROM_ADDESS: noreply@extream.app
+          env_variables.EXTREAM_FROM_ADDRESS: noreply@extream.app
           env_variables.SECURE_KEY: ${{ secrets.SECURE_KEY }}
           env_variables.SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
           env_variables.SENDGRID_CLIENT_SIGNUP_TEMPLATE_ID: d-78529a650e9b418f8e46e583818b517e
