--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,9 @@
 service: ex-auth
-runtime: nodejs14
+runtime: nodejs
+env: flex
+
+beta_settings:
+  cloud_sql_instances: "stoked-reality-284921:europe-west2:extream"
 
 env_variables:
   CLOUD_SQL_USERNAME: $CLOUD_SQL_USERNAME
